[package]
edition = "2021"
name = "dlc-link-utils"
version = "0.1.0"

[[bin]]
name = "generate-key"
path = "src/bin/generate-key.rs"


[dependencies]
tokio = { version = "1.31.0", features = ["rt", "time"] }
bdk = { version = "0.28.2", default-features = false, features = [
  "keys-bip39",
  "key-value-db",
] }
bitcoin = { version = "0.29.2", features = ["serde"] }
bytes = "1"
chrono = "0.4.0"
miniscript = { version = "9.0.2", features = [
  "serde",
  "std",
], default-features = false }
hex = "0.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.81"
secp256k1 = { version = "0.24.3" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
